--- a/src/modules/Manager/Components/Common/StatusChip.css
+++ b/src/modules/Manager/Components/Common/StatusChip.css
@@ -33,7 +33,8 @@
   display: inline-block;
   width: 8px;
   height: 8px;
-  margin-right: 2px;
+  margin-left: 8px;
+  margin-right: 0px;
   border-radius: 50%;
   background-color: currentColor;
   animation: statusPulse 1.5s ease-in-out infinite !important;
